--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "friendly-learning",
   "version": "1.0.0",
-  "description": "- NodeJS LTS verison dwonload [link](https://nodejs.org/dist/v18.12.1/node-v18.12.1-x64.msi).",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/KonstantinovEgor/friendly-learning.git"
   },
-  "author": "Miracle Sw1n",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/KonstantinovEgor/friendly-learning/issues"
   },
-  "homepage": "https://github.com/KonstantinovEgor/friendly-learning#readme"
+  "homepage": "https://github.com/KonstantinovEgor/friendly-learning#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
