--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "type": "git",
     "url": "git+https://github.com/KonstantinovEgor/friendly-learning.git"
   },
-  "author": "Miracle Sw1n",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/KonstantinovEgor/friendly-learning/issues"
   },
-  "homepage": "https://github.com/KonstantinovEgor/friendly-learning#readme"
+  "homepage": "https://github.com/KonstantinovEgor/friendly-learning#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "path": "^0.12.7"
+  }
 }
