--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/KonstantinovEgor/friendly-learning#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "path": "^0.12.7"
   }
 }
